--- a/partners.html
+++ b/partners.html
@@ -6,18 +6,19 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <header id="initial-header" class="initial-header">
+        <div class="container">
+            <a href="index.html" class="logo">GRIDRUNNER</a>
+            <nav>
+                <a href="platform.html" class="nav-link">PLATFORM</a>
+                <a href="products.html" class="nav-link">PRODUCTS</a>
+                <a href="partners.html" class="nav-link">PARTNERS</a>
+                <a href="company.html" class="nav-link">COMPANY</a>
+            </nav>
+            <button class="btn btn-secondary" href="demo.html">GET DEMO</button>
+        </div>
+    </header>
 <section id="partners">
-
-    <header class="main-header">
-        <nav>
-            <a href="index.html" class="logo"><b> GRIDRUNNER</b></a>
-            <a href="platform.html" class="nav-link">Platform</a>
-            <a href="products.html" class="nav-link">Products</a>
-            <a href="partners.html" class="nav-link">Partners</a>
-            <a href="company.html" class="nav-link">Company</a>
-            <button class="btn btn-secondary">GET DEMO</button>
-        </nav>
-</header>
 
 <div class="container">
     <header class="title">
@@ -34,7 +35,7 @@
 
     <div class="partner-card" id="partner-0">
         <div class="partner-content"> 
-            <h3>Developing cutting-edge tools for the banking industry</h3>
+            <h2>Developing cutting-edge tools for the banking industry</h2>
             <p>Our partnership with AIB allows us to complement our advanced cybersecurity solutions with real-time insights. This allows us to maintain the pace with developments in the industry and to create tailred security measures in accordance with specific needs. A closely-knit partnership as such ensures that financial institutions stay ahead of the curve when it comes to data integrity and confidentiality, taking a proactive approach. </p>
         </div>
 
@@ -124,16 +125,18 @@
     </div>
 
     <section class="cta-section">
+        <div>
         <h2>Ready to Become a partner?</h2>
         <p>Join a Network of Professionals willing to advance the cause of cybersecurity worldwide. Chat with industry experts and gain new insights with our advanced tools. Completely free of charge. </p>
         <button class="apply-button">Apply now</button>
+    </div>
     </section>
     <footer>
             <div class="footerContainer">
                 <div class="footerItem">
-                    <a href="privacy-policy.html">Privacy Policy</a>
-                    <a href="terms-and-conditions.html">Terms and Conditions</a>
-                    <a href="contact.html">Contact us</a>
+                    <a href="terms-and-privacy.html#privacy-policy">Privacy Policy</a>
+                    <a href="terms-and-privacy.html#terms-and-conditions">Terms and Conditions</a>
+                    <a href="#">Contact us</a>
                 </div>
                 <div class="footerItem">
                     <a href="#">LinkedIn <img src="images/linkedin.svg" width="10px"/></a> 
