--- a/products.html
+++ b/products.html
@@ -8,16 +8,19 @@
 <body>
     <section id="Products">
 
-        <header class="main-header">
-            <nav>
-                <a href="index.html" class="logo"><b> GRIDRUNNER</b></a>
-                <a href="platform.html" class="nav-link">Platform</a>
-                <a href="products.html" class="nav-link">Products</a>
-                <a href="partners.html" class="nav-link">Partners</a>
-                <a href="company.html" class="nav-link">Company</a>
-                <button class="btn btn-secondary">GET DEMO</button>
-            </nav>
-    </header>
+        <header id="initial-header" class="initial-header">
+            <div class="container">
+                <a href="index.html" class="logo">GRIDRUNNER</a>
+                <nav>
+                    <a href="platform.html" class="nav-link">PLATFORM</a>
+                    <a href="products.html" class="nav-link">PRODUCTS</a>
+                    <a href="partners.html" class="nav-link">PARTNERS</a>
+                    <a href="company.html" class="nav-link">COMPANY</a>
+                </nav>
+            <a class="btn btn-secondary" href="demo.html">GET DEMO</a>
+            </div>
+        </header>
+
     <div class="container">
         <h1>We offer several security packages<br>to ensure you get the best bang for your buck.</h1>
         
@@ -51,19 +54,19 @@
                             <h3>Demo</h3>
                             <h4 class="price">€0/month</h4>
                             <p>Try out how things workfor free! No automatic renewal.</p>
-                            <button class="blue-btn">Try now</button>
+                            <a href="demo.html"> <button class="apply-button"> Try now </button></a> 
                         </div>
                         <div class="pricing-option">
                             <h3>Yearly</h3>
                             <h4 class="price">€36/year</h4>
                             <p>Enjoy 12 months of service at the price of 9. This is our most popular plan.</p>
-                            <button class="blue-btn">Get Started</button>
+                            <button class="apply-button">Get Started</button>
                         </div>
                         <div class="pricing-option">
                             <h3>Monthly</h3>
                             <h4 class="price">€4/month</h4>
                             <p>Cancel anytime. No hidden charges. No conpromises.</p>
-                            <button class="blue-btn">Get Started</button>
+                            <button class="apply-button">Get Started</button>
                         </div>
                     </div>
                     <p class="disclaimer">All prices are tax-inclusive and apply to a single device. Charges are non-refundable under normal circumstances. If you would like to undertake a request for quotation, please contact sales@gridrunner.net</p>
@@ -73,7 +76,7 @@
         <div class="tab-content" id="scale">
             <p class="description">Looking to expand the capacity and complexity of your business? We've got you covered. Our Scale Package will increase the robustness of your infraestructure along its capacity. </p>
             <ul class="features">
-                <li id="includesFeature">Everything in Core</li>
+                <li id="includesFeature"><b> Everything in Core </b></li>
                 <li>Access to our distributed Anti-DDos network, including traffic filtration and load balancing</li>
                 <li>Guaranteed HIPAA, GDPR, and PCI-DSS compliance, advised by our team of legal consultants.</li>
                 <li>Expert guidance on ongoing incident response and business continuity planning</li>
@@ -92,19 +95,19 @@
                         <h3>Demo</h3>
                         <h4 class="price">€0/month</h4>
                         <p>Try out how things work for free! No automatic renewal. </p>
-                        <button class="blue-btn">Try now</button>
+                        <a href="demo.html"> <button class="apply-button"> Try now </button></a> 
                     </div>
                     <div class="pricing-option">
                         <h3>Yearly</h3>
                         <h4 class="price">€54/year</h4>
                         <p>Enjoy 12 months of service at the price of 9. This is our most popular plan.</p>
-                        <button class="blue-btn">Get Started</button>
+                        <button class="apply-button">Get Started</button>
                     </div>
                     <div class="pricing-option">
                         <h3>Monthly</h3>
                         <h4 class="price">€6/month</h4>
                         <p>Cancel anytime. No hidden charges. No compromises </p>
-                        <button class="blue-btn">Get Started</button>
+                        <button class="apply-button">Get Started</button>
                     </div>
                 </div>
                 <p class="disclaimer">All prices are tax-inclusive and apply to a single device. Charges are non-refundable under normal circumstances. If you would like to undertake a request for quotation, please contact sales@gridrunner.net</p>
@@ -115,7 +118,7 @@
         <div class="tab-content" id="distributed">
             <p class="description">Robust infraestructure to ensure data integrity and confidentiality within your remote and distributed teams. Enjoy the calm with our specialised network and endpoint protection systems. </p>
             <ul class="features">
-                <li id="includesFeature">Everything in Core</li>
+                <li id="includesFeature"><b> Everything in Core</b> </li>
                 <li>Real-time behavioural analysis and threat monitoring, powered by AegisAI</li>
                 <li>Strict enforcement of identity management and authentification</li>
                 <li>Integrated VPN and packet encryption against man-in-the-middle attacks</li>
@@ -134,19 +137,19 @@
                         <h3>Demo</h3>
                         <h4 class="price">€0/month</h4>
                         <p>Try out how things workfor free! No automatic renewal. </p>
-                        <button class="blue-btn">Try now</button>
+                        <a href="demo.html"> <button class="apply-button"> Try now </button></a> 
                     </div>
                     <div class="pricing-option">
                         <h3>Yearly</h3>
                         <h4 class="price">€72/year</h4>
                         <p>Enjoy 12 months of service at the price of 9. This is our most popular plan.</p>
-                        <button class="blue-btn">Get Started</button>
+                        <button class="apply-button">Get Started</button>
                     </div>
                     <div class="pricing-option">
                         <h3>Monthly</h3>
                         <h4 class="price">€8/month</h4>
                         <p>Cancel anytime. no hidden charges. No compromises </p>
-                        <button class="blue-btn">Get Started</button>
+                        <button class="apply-button">Get Started</button>
                     </div>
                 </div>
                 <p class="disclaimer">All prices are tax-inclusive and apply to one single device. Charges are non-refundable under normal circumstances. If you would like to undertake a request for quotation, please contact sales@gridrunner.net</p>
@@ -157,7 +160,7 @@
         <div class="tab-content" id="ultimate">
             <p class="description">Our most advanced tools to ensure maximum protection and calm. Enjoy industry-leading solutions at an affordable price.</p>
             <ul class="features">
-                <li id="includesFeatures">Everything in Scale and Distributed </li>
+                <li id="includesFeatures"><b>Everything in Scale and Distributed</b> </li>
                 <li>AegisAI-powered vulnerability scanning, including zero-day exploits and rootkits </li>
                 <li>Weekly security assesments and penetration testing by our ethical hackers division</li>
                 <li>Establishment of data access and exfiltration prevention systems against insider threats </li>
@@ -175,19 +178,19 @@
                         <h3>Demo</h3>
                         <h4 class="price">€0/month</h4>
                         <p>Try out how things work for free! No automatic renewal.</p>
-                        <button class="blue-btn">Try now</button>
+                        <a href="demo.html"> <button class="apply-button"> Try now </button></a> 
                     </div>
                     <div class="pricing-option">
                         <h3>Yearly</h3>
                         <h4 class="price">€108/year</h4>
                         <p>Enjoy 12 months of service at the price of 9. This is our most popular plan.</p>
-                        <button class="blue-btn">Get Started</button>
+                        <button class="apply-button">Get Started</button>
                     </div>
                     <div class="pricing-option">
                         <h3>Monthly</h3>
                         <h4 class="price">€12/month</h4>
                         <p>Cancel anytime. no hidden charges. No compromises. </p>
-                        <button class="blue-btn">Get Started</button>
+                        <button class="apply-button">Get Started</button>
                     </div>
                 </div>
                 <p class="disclaimer">All prices are tax-inclusive and apply to a single device. Charges are non-refundable under normal circumstances. If you would like to undertake a request for quotation, please contact sales@gridrunner.net</p>
@@ -198,9 +201,9 @@
         <footer>
             <div class="footerContainer">
                 <div class="footerItem">
-                    <a href="privacy-policy.html">Privacy Policy</a>
-                    <a href="terms-and-conditions.html">Terms and Conditions</a>
-                    <a href="contact.html">Contact us</a>
+                    <a href="terms-and-privacy.html#privacy-policy">Privacy Policy</a>
+                    <a href="terms-and-privacy.html#terms-conditions">Terms and Conditions</a>
+                    <a href="contact-us.html">Contact us</a>
                 </div>
                 <div class="footerItem">
                     <a href="#">LinkedIn <img src="images/linkedin.svg" width="10px"/></a> 
