--- a/partners.html
+++ b/partners.html
@@ -135,7 +135,7 @@
             <div class="footerContainer">
                 <div class="footerItem">
                     <a href="terms-and-privacy.html#privacy-policy">Privacy Policy</a>
-                    <a href="terms-and-privacy.html#terms-and-conditions">Terms and Conditions</a>
+                    <a href="terms-and-privacy.html#terms-conditions">Terms and Conditions</a>
                     <a href="contact-us.html">Contact us</a>
                 </div>
                 <div class="footerItem">
